fix up 'show password' alignment

--- a/web/src/styles/scss/password-meter.scss
+++ b/web/src/styles/scss/password-meter.scss
@@ -8,7 +8,11 @@
   max-width: $input-max-width;
 
   .password-with-meter--show-password label.ds-c-label {
-    margin: 24px 0 0 0;
+    margin: 0;
+  }
+
+  .ds-u-clearfix.no-clearfix:before {
+    display: inherit;
   }
 }
 
